--- a/index.html
+++ b/index.html
@@ -2,17 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
     <title>Document</title>
 
     <!--CSS links from ./styles-->
     <link rel="stylesheet" href="./styles/styles.css">
 
+    <!--CSS Google Fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Extra+Condensed:wght@600&display=swap" rel="stylesheet">
+
     <!--Bootstrap CSS link-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div class="container-fluid">
+        <div class="row section section-grey">
+            <div class="section-container">
+                <div id="first" class="col-12">
+                    <h1>Hi! I'm Luie.</h1>
+                    <h5>Full Stack Software Developer || QA Specialist</h5>
+                    <br/>
+                    <h4>Welcome to my portfolio!</h4>
+
+                    <div class="button-group">
+                        <button>About( )</button>
+                        <button>Experience( )</button>
+                        <button>Projects( )</button>
+                        <button>Contact( )</button>
+                    </div>
+                </div>
+            </div>
+
+            </div>
+        </div>
+
+        <div class="row section fill">
+            <div id="second" class="col-12">
+                <p>Hi this is my Second div.</p>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+    
 
     <!--Bootstrap JS links-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
