--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> -->
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Document</title>
-
-    <!--CSS links from ./styles-->
-    <link rel="stylesheet" href="./styles/styles.css">
 
     <!--CSS Google Fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -15,23 +12,29 @@
 
     <!--Bootstrap CSS link-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+    <!--CSS links from ./styles-->
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row section section-grey">
-            <div class="section-container">
-                <div id="first" class="col-12">
-                    <h1>Hi! I'm Luie.</h1>
-                    <h5>Full Stack Software Developer || QA Specialist</h5>
-                    <br/>
-                    <h4>Welcome to my portfolio!</h4>
+        <div id="home" class="row section section-grey">
+            <div class="section-container col-12 col-md-4 offset-md-4">
 
-                    <div class="button-group">
-                        <button>About( )</button>
-                        <button>Experience( )</button>
-                        <button>Projects( )</button>
-                        <button>Contact( )</button>
-                    </div>
+                <div id="home-title">
+                    <h1>Hello, I'm <span id="name">LUIE SANTOS</span>.</h1>
+                    <h4>Im a Full Stack Software Developer</h4>
+                </div>
+                
+                <div id="home-subtitle">
+                    <h4>Welcome to my online portfolio!</h4>
+                </div>
+
+                <div id="home-menu">
+                    <button type="button" class="btn btn-lg">About( )</button>
+                    <button type="button" class="btn btn-lg">Experiences( )</button>
+                    <button type="button" class="btn btn-lg">Projects( )</button>
+                    <button type="button" class="btn btn-lg">Contact( )</button>
                 </div>
             </div>
 
