--- a/index.html
+++ b/index.html
@@ -17,8 +17,35 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
+    <nav class="navbar fixed-top navbar-expand-sm navbar-dark">
+        <a class="navbar-brand" href="#home"><button class="brand-icon" disabled>LS</button> Luie Santos</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#home">Home( )</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About( )</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Experience( )</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Projects( )</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact( )</a>
+              </li>
+          </ul>
+        </div>
+      </nav>
+
+
     <div class="container-fluid">
-        <div id="home" class="row section section-grey">
+        <div id="home" class="row section section-black">
             <div class="section-container col-12 col-md-4 offset-md-4">
 
                 <div id="home-title">
@@ -37,14 +64,25 @@
                     <button type="button" class="btn btn-lg">Contact( )</button>
                 </div>
             </div>
-
-            </div>
         </div>
 
-        <div class="row section fill">
-            <div id="second" class="col-12">
-                <p>Hi this is my Second div.</p>
+        <div id="about" class="row section section-white">
+            <div class="col-12">
+                <div class="row">
+                    <div class="spacer col-12">&nbsp;</div>
+                </div>
+                <div class="row">
+                    <div id="about-title" class="col-12">
+                        <h3>About</h3>
+                    </div>
+
+                    <div class="col-4">
+                        <!-- this is where the image goes -->
+                    </div>
+                </div>
             </div>
+
+            
         </div>
     </div>
 
